--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - echo Install started on `date`
       - sudo apt-get update -y
       - sudo apt-get install -y wget gdebi-core
-      - wget https://packages.chef.io/stable/ubuntu/16.04/chefdk_1.3.40-1_amd64.deb
+      - wget https://packages.chef.io/files/stable/chefdk/1.3.40/ubuntu/16.04/chefdk_1.3.40-1_amd64.deb
       - gdebi -n chefdk_1.3.40-1_amd64.deb
  pre_ build: #this means test
     commands:
