--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,9 @@ phases:
       - sudo apt-get update -y
       - sudo apt-get install -y wget gdebi-core
       - wget https://packages.chef.io/files/stable/chefdk/1.3.40/ubuntu/16.04/chefdk_1.3.40-1_amd64.deb
-      - gdebi -n chefdk_1.3.40-1_amd64.deb
+      - sudo gdebi -n chefdk_1.3.40-1_amd64.deb
+      - echo 'eval "$(chef shell-init bash)"' >> ~/.bash_profile
+      - source ~/.bash_profile
  pre_ build: #this means test
     commands:
       - echo ===========RUNNING TESTS ===========
