--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,17 +9,17 @@ phases:
     commands:
       - echo Install started on `date`
       - sudo apt-get update -y
-      - sudo apt-get install -y wget gdebi-core
+      - sudo apt-get install -y wget gdebi-core git
       - wget https://packages.chef.io/files/stable/chefdk/1.3.40/ubuntu/16.04/chefdk_1.3.40-1_amd64.deb
       - sudo gdebi -n chefdk_1.3.40-1_amd64.deb
 pre_build: #this means test
     commands:
       - echo ===========RUNNING TESTS ===========
-      - foodcritic .
-      - rubocop -D
 build:
     commands:
       - echo ===========RUNNNING BUILD ==========
+      - foodcritic .
+      - rubocop -D
 post_build: # Deploy
     commands:
       - echo ===========RUNNING DEPLOY ==========
